2004-07-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (exec_cmd)  term/gd.trm (PNG_point): Apply current
	linewidth to point symbols.

	* src/misc.c (get_style): Add new styles 'labels' and 'histograms' to
	the error message listing possible styles.

2004-07-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Integrated SF patch #976546 by Stephane Barbaray, with some
	additional changes by me.
	
	* term/emf.trm: Reindented.  Ancient hacks for NeXT and <assert.h>
	purged.
	(EMF_PX2HM): Changed to 26.37.
	(EMF_HCHAR, EMF_VCHAR): Changed by factors 0.6 and 1.3,
	respectively.
	(EMF_set_font): Multiply recomputed values for h_char and v_char
	by 0.6 and 1.3, respectively.
	(EMF_setfont): Output correct font struct size with some fields
	previously missing.
	(EMF_graphics): Divide by EMF_PX2HM instead of 20.  Make reference
	device 1024x768 pixels, 270x200 mm.
	(EMF_put_text): Use ExtTextOutA instead of ExtTextOutW, include
	array of offsets
	(EMF_point): Disable special treatment of negative point types,
	i.e. dots --- why?
	(EMF_set_pointsize): Don't divide base size by 2.

2004-07-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wtext.c (WndTextProc): Fix bug introduced during
	ANSI-fication operation.

2004-07-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Rework event-handling subroutines so that the
	intermediate window resize and redraw events are skipped if possible.
	This reduces the hysteresis when the window is resized by dragging.
	Patch by Jay Painter <jpaint@u.washington.edu>.

2004-07-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_labels3d place_arrows3d get_arrow3d): Test for
	wrap-around of negative coordinates when converted to unsigned screen
	coordinates by map3d_position. If wrap-around has occurred, then skip
	this label or arrow when drawing the 3D plot. This really should be a
	general test for out-of-bounds, but the simple test at least catches